@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.72 2007/03/09 01:09:05 kennykb Exp $
+# RCS: @(#) $Id: clock.test,v 1.73 2007/03/09 02:26:05 kennykb Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -19,10 +19,16 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 }
 
 if {[testConstraint win]} {
-    if {[catch {package require registry 1.1}]} {
+    if {[catch {package require registry 1.1}] 
+	&& [catch {load {} Registry}]
+	&& [catch {
+	    ::tcltest::loadTestedCommands
+	    load $::reglib Registry
+	}]} {
 	namespace eval ::tcl::clock {variable NoRegistry {}}
     }
 }
+
 package require msgcat 1.4
 
 testConstraint detroit \
